I deleted the proj from Eclips and I add again and this file appeared

--- a/.project
+++ b/.project
@@ -14,4 +14,81 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/com/taskmanagement/Main.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Main.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/models/Completable.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Completable.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/models/Deadline.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Deadline.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/models/Priority.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Priority.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/models/Project.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Project.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/models/Task.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Task.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/models/TimedTask.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/TimedTask.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/models/User.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/User.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/utiles/CSVExporter.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/CSVExporter.java</locationURI>
+		</link>
+		<link>
+			<name>src/com/taskmanagement/utiles/NotificationService.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/NotificationService.java</locationURI>
+		</link>
+		<link>
+			<name>test/com/taskmanagement/models/DeadlineTest.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Test/DeadlineTest.java</locationURI>
+		</link>
+		<link>
+			<name>test/com/taskmanagement/models/ProjectTest.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Test/ProjectTest.java</locationURI>
+		</link>
+		<link>
+			<name>test/com/taskmanagement/models/TaskTest.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Test/TaskTest.java</locationURI>
+		</link>
+		<link>
+			<name>test/com/taskmanagement/models/TimedTaskTest.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Test/TimedTaskTest.java</locationURI>
+		</link>
+		<link>
+			<name>test/com/taskmanagement/models/UserTest.java</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/OneDrive/Desktop/OOP%20Project/New%20folder/Test/UserTest.java</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
